# markdown-rs

./: .editorconfig  .gitignore  Cargo.toml  Untitled.txt  build.rs  codecov.yml  readme.md  renovate.json
.github/: code-of-conduct.md  contribute.md  support.md
.github/workflows/: main.yml
benches/: bench.rs
examples/: lib.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_text.rs  markdown.rs  markdown_honggfuzz.rs  micromark.rs
generate/: Cargo.toml
generate/src/: main.rs
mdast_util_to_markdown/: Cargo.toml
mdast_util_to_markdown/src/: association.rs  association_id.rs  configure.rs  construct_name.rs  lib.rs  message.rs  parents.rs  state.rs  to_markdown.rs  unsafe.rs
mdast_util_to_markdown/src/handle/: blockquote.rs  break.rs  code.rs  definition.rs  emphasis.rs  heading.rs  html.rs  image.rs  image_reference.rs  inline_code.rs  inline_math.rs  link.rs  link_reference.rs  list.rs  list_item.rs  math.rs  mdx_expression.rs  mdx_js_esm.rs  mdx_jsx.rs  mod.rs  paragraph.rs  root.rs  strong.rs  text.rs  thematic_break.rs
mdast_util_to_markdown/src/util/: check_bullet.rs  check_bullet_ordered.rs  check_bullet_other.rs  check_emphasis.rs  check_fence.rs  check_quote.rs  check_rule.rs  check_rule_repetition.rs  check_strong.rs  contains_control_or_whitespace.rs  format_code_as_indented.rs  format_link.rs  mod.rs  (+6 more)
mdast_util_to_markdown/tests/: blockquote.rs  break.rs  code.rs  core.rs  definition.rs  emphasis.rs  heading.rs  html.rs  image.rs  image_reference.rs  inline_code.rs  link.rs  link_reference.rs  list.rs  list_item.rs  math.rs  mdx.rs  paragraph.rs  roundtrip.rs  strong.rs  text.rs  thematic_break.rs
script/: generate-unicode.js
scripts/: generate-fixtures.mjs
src/: compiler.rs  configuration.rs  constant.rs  error.rs  event.rs  lib.rs  mdast.rs  message.rs  parser.rs  resolve.rs  state.rs  subtokenize.rs  to_html.rs  to_markdown.rs  to_mdast.rs  token.rs  tokenizer.rs  unicode.rs  unist.rs  util.rs
src/construct/: attention.rs  autolink.rs  blank_line.rs  block_quote.rs  character_escape.rs  character_reference.rs  code_fenced.rs  code_indented.rs  code_text.rs  content.rs  definition.rs  document.rs  flow.rs  frontmatter.rs  gfm_autolink_literal.rs  gfm_footnote_definition.rs  gfm_label_start_footnote.rs  gfm_table.rs  gfm_task_list_item_check.rs  hard_break_escape.rs  hard_break_trailing.rs  heading_atx.rs  heading_setext.rs  html_flow.rs  html_text.rs  label_end.rs  label_start_image.rs  label_start_link.rs  list.rs  list_item.rs  mdx_esm.rs  mdx_expression_flow.rs  mdx_expression_text.rs  mdx_jsx_flow.rs  mdx_jsx_text.rs  mod.rs  paragraph.rs  partial_bom.rs  partial_data.rs  partial_destination.rs  (+13 more)
src/content/: content.rs  document.rs  flow.rs  mod.rs  string.rs  text.rs
src/mdast/: ser.rs
src/unist/: ser.rs
src/util/: char.rs  character_reference.rs  classify_character.rs  codes.rs  constant.rs  decode_character_reference.rs  edit_map.rs  encode.rs  format_code_as_indented.rs  format_heading_as_setext.rs  gfm_tagfilter.rs  identifier.rs  infer.rs  line_ending.rs  link.rs  location.rs  mdx.rs  mdx_collect.rs  mod.rs  normalize_identifier.rs  sanitize_uri.rs  skip.rs  slice.rs  span.rs  unicode.rs
tests/: attention.rs  autolink.rs  block_quote.rs  character_escape.rs  character_reference.rs  code_fenced.rs  code_indented.rs  code_text.rs  commonmark.rs  definition.rs  frontmatter.rs  fuzz.rs  gfm_autolink_literal.rs  gfm_footnote.rs  gfm_strikethrough.rs  gfm_table.rs  gfm_tagfilter.rs  gfm_task_list_item.rs  hard_break_escape.rs  hard_break_trailing.rs  heading_atx.rs  heading_setext.rs  html_flow.rs  html_text.rs  image.rs  lib.rs  link_reference.rs  link_resource.rs  list.rs  math_flow.rs  math_text.rs  mdast_ser.rs  mdast_ser2.rs  mdast_serde.rs  mdx_esm.rs  mdx_expression_flow.rs  mdx_expression_text.rs  mdx_jsx_flow.rs  mdx_jsx_text.rs  mdx_swc.rs  (+22 more)
tests/fixtures/: README.md
tests/test_utils/: hast.rs  hast_util_to_swc.rs  jsx_rewrite.rs  mdast_util_to_hast.rs  mdx.rs  mdx_plugin_recma_document.rs  mdx_plugin_recma_jsx_rewrite.rs  micromark_swc_utils.rs  mod.rs  swc.rs  swc_utils.rs  to_document.rs  to_hast.rs  to_swc.rs
(+11 files in other folders)
