[package]
name = "markdown"
version = "1.0.0-alpha.20"
authors = ["Titus Wormer <tituswormer@gmail.com>"]
edition = "2018"
rust-version = "1.56"
description = "CommonMark compliant markdown parser in Rust with ASTs and extensions"
homepage = "https://github.com/wooorm/markdown-rs"
repository = "https://github.com/wooorm/markdown-rs"
license = "MIT"
keywords = ["commonmark", "markdown", "parse", "render", "tokenize"]
categories = ["compilers", "encoding", "parser-implementations", "parsing", "text-processing"]
include = ["src/", "license"]

[[bench]]
name = "bench"
path = "benches/bench.rs"
harness = false

[features]
default = []
json = ["serde"]
serde = ["dep:serde"]
log = ["dep:log"]

[dependencies]
log = { version = "0.4", optional = true }
unicode-id = { version = "0.3", features = ["no_std"] }
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
env_logger = "0.11"
criterion = "0.5"
pretty_assertions = "1"
serde_json = { version = "1" }
swc_core = { version = "0.100", features = [
  "ecma_ast",
  "ecma_visit",
  "ecma_parser",
  "common",
] }

[workspace]
members = ["generate"]
